[package]
name = "actix-web-middleware-redirect-scheme"
version = "3.0.0"
description = "A middleware for actix-web which forwards all `http` requests to `https` and vice versa. Based on actix-web-middleware-redirect-https."
authors = ["Peter Trotman <petertrotman@gmail.com>", "Захаров Константин Иванович <konstantin_1987@mail.ru>", "Mark Nijboer <mark@nijboer.email>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/actix-web-middleware-redirect-scheme"
repository = "https://github.com/perdumonocle/actix-web-middleware-redirect-scheme"
readme = "README.md"
keywords = ["actix-web", "middleware", "redirect", "https", "ssl"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
actix-service = "2"
actix-web = { version = "4", default-features = false }
futures = "0.3"
log = "0.4"

[badges]
travis-ci = { repository = "perdumonocle/actix-web-middleware-redirect-scheme" }
